remove snapshot dependencies, update them to the latest available non-snapshot versions Signed-off-by:Lukas Jungmann <lukas.jungmann@oracle.com>