@@ -47,14 +47,14 @@
         <groupId>com.sun.xml.ws</groupId>
         <artifactId>jaxws-ri-bom-ext</artifactId>
         <version>2.3.0-SNAPSHOT</version>
-        <relativePath>boms/bom-ext/pom.xml</relativePath>    
+        <relativePath>boms/bom-ext/pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sun.xml.ws</groupId>
     <artifactId>project</artifactId>
     <version>2.3.0-SNAPSHOT</version>
-    
+
     <packaging>pom</packaging>
     <name>JAX-WS (JSR-224) Reference Implementation</name>
     <description>Open source Reference Implementation of JSR-224: Java API for XML Web Services</description>
@@ -260,21 +260,6 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
                     <version>3.0.0</version>
-                    <executions>
-                        <execution>
-                            <id>prepare-endorsed</id>
-                            <phase>validate</phase>
-                            <goals>
-                                <goal>copy-dependencies</goal>
-                            </goals>
-                            <configuration>
-                                <skip>${maven.endorsed.skip}</skip>
-                                <outputDirectory>${endorsed.dir}</outputDirectory>
-                                <silent>false</silent>
-                                <includeArtifactIds>javax.annotation-api,jsr181-api,jaxb-api,javax.xml.soap-api,jaxws-api</includeArtifactIds>
-                            </configuration>
-                        </execution>
-                    </executions>
                 </plugin>
                 <plugin>
                     <groupId>com.sun.wts.tools.ant</groupId>
@@ -522,6 +507,25 @@
                 <artifactId>import-properties-plugin</artifactId>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>prepare-endorsed</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <skip>${maven.endorsed.skip}</skip>
+                            <outputDirectory>${endorsed.dir}</outputDirectory>
+                            <silent>false</silent>
+                            <includeArtifactIds>javax.annotation-api,jsr181-api,jaxb-api,javax.xml.soap-api,jaxws-api</includeArtifactIds>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
                 <executions>
@@ -727,6 +731,12 @@
                                     <release>9</release>
                                     <source>9</source>
                                     <target>9</target>
+                                    <compilerArgs>
+                                        <arg>--add-modules</arg>
+                                        <arg>java.xml.bind</arg>
+                                        <arg>--upgrade-module-path</arg>
+                                        <arg>${endorsed.dir}</arg>
+                                    </compilerArgs>
                                 </configuration>
                             </execution>
                             <execution>
@@ -1035,7 +1045,7 @@
             </build>
         </profile>
     </profiles>
-    
+
     <dependencyManagement>
         <dependencies>
 
@@ -1046,10 +1056,10 @@
                 <version>${junit.version}</version>
                 <scope>test</scope>
             </dependency>
-            
+
         </dependencies>
     </dependencyManagement>
-    
+
     <dependencies>
         <!-- Make sure new apis are used across the project -->
         <dependency>
@@ -1078,5 +1088,5 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-            
+
 </project>
